tests/test_files/default/pos/get_otype.s
    mov r1 pc
    mov r2 12
    lea r0 10
    seal r3 r0 pc
    getotype r0 r0
    getotype r1 r1
    getotype r2 r2
    getotype r3 r3
    halt
